--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
 }
 
 .active{
-  background-color: white;
   font-weight: bold;
   border-top-left-radius: 40px;
   border-bottom-left-radius: 40px;
@@ -66,6 +65,85 @@
   }
 }
 
+
+
+/* ///for modals */
+.modal,
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  z-index: 9999;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-content {
+  position: relative;
+  background: #f0f3f5;
+  width: 75%;
+  height: 70vh;
+  margin: auto;
+  z-index: 9999;
+  border-radius: 10px;
+  margin-top: 5%;
+  overflow-y: scroll;
+}
+.modal-content::-webkit-scrollbar {
+  display: none;
+}
+
+.modal-text {
+  padding: 0 100px 0 50px;
+  position: relative;
+}
+.modal-text h1 {
+  margin: 20px 0 20px 0;
+  font-size: 30px;
+}
+.modal-text p {
+  font-size: 17px;
+  margin-bottom: 20px;
+  line-height: 25px;
+}
+
+.modal-text button.close-modal {
+  position: fixed;
+  top: 15%;
+  right: 16%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  padding: 0 0;
+  font-size: 20px;
+}
+.modal-text button.close-modal i {
+  margin: 0;
+}
+/*------------popup--------*/
+@media (max-width: 768px) {
+  .modal,
+  .overlay {
+    overflow: scroll;
+  }
+
+  .modal .modal-img {
+    margin: 50px 0 50px 0;
+  }
+  .modal-content {
+    flex-direction: column;
+  }
+  .modal .right,
+  .modal .left {
+    padding: 0;
+  }
+}
 
 
 
